maze.lessons.maze.island.IslandMaze.scala.error
Escaper:30: error: not found: value murGauche
			if (murGauche() && !estFaceMur()) {
                            ^Escaper:33: error: not found: value murGauche
			else if (murGauche() && estFaceMur()) {
                                 ^