maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	def murGauche():Boolean = {
		gauche();
		if (estFaceMur()) {
			droite();
			return true;
		}
		droite();
		return false;
	}
while (getY()!=0) {
	if (!estFaceMur()) {
		avance();
	}
	else {
		droite();
		if (!estFaceMur()) {
			avance();
			gauche();
		}
	}
}
droite();
keepHandOnSideWall;
}

def keepHandOnSideWall = {
		while (!estSurBiscuit()) {
			if (murGauche() && !estFaceMur()) {
				avance();
			}
			else if (murGauche() && estFaceMur()) {
				droite();
				if (!estFaceMur()) {
					avance();
				}
			}
			else {
				gauche();
				avance();
			}
		}
	prendBiscuit();
	}